--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Snake Game</h1>
     <canvas id="gameCanvas"></canvas>
+    <button id="restart" onclick="location.reload()">Restart</button>
     <script src="script.js"></script>
 </body>
 </html>
